2004-10-07  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_set_scale_ratio):
	  Actually do that, rather than just shrinking to a small size.

2004-10-07  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (get_media_size),
	(bacon_video_widget_realize), (bacon_video_widget_size_request),
	(shrink_toplevel), (bacon_video_widget_signal_idler),
	(bacon_video_widget_set_logo), (bacon_video_widget_set_visuals),
	(bacon_video_widget_set_scale_ratio), (bacon_video_widget_new):
	* src/video-utils.c: (cb_unset_size), (cb_set_preferred_size),
	(totem_widget_set_preferred_size):
	* src/video-utils.h:
	  Set a preferred window size. Allows resizing to smaller than
	  this size.

2004-10-07  Bastien Nocera  <hadess@hadess.net>

	* src/totem-pl-parser.c: (parse_asx_entry), (parse_asx_entries),
	(totem_pl_parser_add_asf): fix parsing of ASX playlists (again),
	allow the title of ASX playlists to be set by the whole playlist, not
	just by the entry (Closes: #153644)

2004-10-06  Bastien Nocera  <hadess@hadess.net>

	* configure.in: remove libgnome-desktop dependency
	* src/totem-pl-parser.c: (totem_pl_parser_add_desktop):
	add application/x-desktop as a supported "playlist" type, and
	reimplement the desktop parsing with our own .ini file parsing
	(Closes: #152800)

============ Version 0.99.17

2004-10-06  Bastien Nocera  <hadess@hadess.net>

	* NEWS: updated
	* configure.in: 0.99.17

2004-10-06  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/totem.c: (on_about1_activate):
	  Because I'm a P I M P.

2004-10-06  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.in:
	  Update GStreamer requirements.

2004-10-06  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/Makefile.am:
	* src/gstvideowidget.c:
	* src/gstvideowidget.h:
	* src/bacon-video-widget-gst.c: (bacon_video_widget_realize),
	(bacon_video_widget_expose_event),
	(bacon_video_widget_size_request),